css/main.css
@media (max-width: 800px) {
  #menu{
    display:none;
  }
  .border-menu {
    position: relative;
    padding-left: 1.25em;
  }
  .border-menu:before {
    content: "";
    position: absolute;
    right: 3em;
    width: 2.5em;
    bottom:2.5em;
    height: 0.3em;
    border-top: 0.8em double #FFF;
    border-bottom: 0.3em solid #FFF;    
  }
  .span_1_of_2{
    width:100% !important;
  }
  #web-pic{
    margin-left:3em !important;
    vertical-align: middle;
  }

  .personal-pic{
    display: block;
    margin-left: auto !important;
    margin-right: auto !important;
    transform: scale(0.8, 0.8);
    -ms-transform: scale(0.8, 0.8);
    -webkit-transform: scale(0.8, 0.8);
  }

  #welcome img{
    padding-left:0px !important;
  }
  #about p{
    padding-right: 1.5em !important;
  }
  .menu-nav{
    display:block;
    left:0px !important;
    font-family:'ubuntu-titletitle',sans-serif;
    font-size: 2.25em;
    position:absolute;
    z-index: 1001;
    font-style: normal;
    background-image: url("../pic/banner.png");
    width:100%;
    height:4em;
    top:0.5em;
  }
  .menu-nav a{
    text-decoration: none;
    color:white;

  }
  .menu-nav ul{
    margin:0;

  }
  .menu-nav li{
    display: table;
    padding-top: 0.25em;

  }
  .nav-action{
    -webkit-transform: translate( 0px, 0em);
       -moz-transform: translate( 0px, 0em);
        -ms-transform: translate( 0px, 0em);
         -o-transform: translate( 0px, 0em);
            transform: translate( 0px, 0em);
    -webkit-transition: all 0.7s ease-in-out;
       -moz-transition: all 0.7s ease-in-out;
        -ms-transition: all 0.7s ease-in-out;
         -o-transition: all 0.7s ease-in-out;
            transition: all 0.7s ease-in-out;          
  }
  .nav-hide{
    -webkit-transform: translate(0px,-9em);
       -moz-transform: translate(0px,-9em);
        -ms-transform: translate(0px,-9em);
         -o-transform: translate(0px,-9em);
            transform: translate(0px,-9em);
    -webkit-transition: all 0.7s ease-in-out;
       -moz-transition: all 0.7s ease-in-out;
        -ms-transition: all 0.7s ease-in-out;
         -o-transition: all 0.7s ease-in-out;
            transition: all 0.7s ease-in-out;  

  }
  body p,a,h2{
    padding-left:1.5em !important;
    padding-right: 1em !important;
  }
  body h1{
    padding-left: 0.5em !important;
    padding-right: 0.1em !important;
  }
  .icon{
    top:1em !important;
  }
  #contact img{
    padding:0em !important;
  }
  #welcome h1{
    font-size: 4.5em !important;
  }
}


@media (min-width: 800px){
  .border-menu{
    display:none;
  }
  .menu-nav{
    display:none;
  }
}

/*--------------------------BANNER-----------------------------------------------*/
#banner_section{
	background-image: url("../pic/banner.png"); 
  width:100%;
  position:fixed;
  background-repeat: repeat;
  z-index: 999;
  height:8em;
}
#banner_section:hover{
  opacity: 1;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -ms-transition: opacity 0.5s ease-in-out;
  -o-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}
#web-pic{
  width: 100px;
  height: 100px;
  border-radius: 50px;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  box-shadow: 0 0 3px rgba(0, 0, 0, .8);
  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, .8);
  margin-left:100px;
}
#web-pic:hover{
  -moz-transition: all 0.7s ease-in-out;
  -webkit-transition: all 0.7s ease-in-out;
  -o-transition: all 0.7s ease-in-out;
  -ms-transition: all 0.7s ease-in-out;
  transition: all 0.7s ease-in-out;
  -moz-transform: rotate(-360deg);
  -webkit-transform: rotate(-360deg);
  -o-transform: rotate(-360deg);
  -ms-transform: rotate(-360deg);
  transform: rotate(-360deg);
}
#menu{
	font-family:'ubuntu-titletitle',sans-serif;
	font-size: 2.25em;
	text-align: center;
	font-style: normal;
	margin-left:0;
}
#menu a{
	text-decoration: none;
	color:white;
}
#menu ul {
    height: auto;
}
#menu li {
    display: inline;
    padding-left:30px;

}
#menu a:hover{
  color:#888;
}
.color_menu_element{
  color:#888 !important;
}
#contact {
  margin-bottom: 2em;
}
#contact img{
  padding:1em;
}
#contact img:hover{
   -moz-transition: all 0.7s ease-in-out;
  -webkit-transition: all 0.7s ease-in-out;
  -o-transition: all 0.7s ease-in-out;
  -ms-transition: all 0.7s ease-in-out;
  transition: all 0.7s ease-in-out;
  -moz-transform: rotate(-360deg);
  -webkit-transform: rotate(-360deg);
  -o-transform: rotate(-360deg);
  -ms-transform: rotate(-360deg);
  transform: rotate(-360deg);
}
.icon{
  top:8.3em;
  display:block;
  padding-left: 3em;
  position:relative;
}
/*--------------------------BANNER-----------------------------------------------*/
body{
	margin:0;
	padding:0;
}
body h1{
	font-family: 'ubuntu-titletitle',sans-serif;
  font-size: 4em;
  padding-left:1.7em;

}
body p{
	 font-family: "proxima nova light","Helvetica Neue",Helvetica,Arial,Sans-serif;
   color:gray;
   font-weight: 100;
   padding-left:7em;
   font-size: 1.3em;
}
.dark{
	top:0;
	background-color: #F7F7F7;
	-webkit-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  -moz-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid #DDD;
}
.border{
  margin-right: auto;
  margin-left: auto;
  display:block;
}
.before_footer{
  -webkit-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
  box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
  border-bottom: 1px solid #DDD;
}

.banner-opacity{
  opacity: 0.7;
  -webkit-transition: opacity 0.5s ease-in-out;
  -moz-transition: opacity 0.5s ease-in-out;
  -ms-transition: opacity 0.5s ease-in-out;
  -o-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
}
.personal-pic{
    display: block;
    margin-left: auto !important;
    margin-right: auto !important;
}
#welcome h1{
  font-family: "proxima nova light","Helvetica Neue",Helvetica,Arial,Sans-serif;
  color:#1D1D1D;
  font-weight: 100;
  font-size: 6em;
  padding-left: 1.5em;
}

#welcome p{

  border-bottom:-10px;
}
#twitter{
  padding-top: 20px;
}
#twitter-name{
  text-align: center;
}
#twitter-name a{
  text-decoration: none;
  color:#4099FF;
  font-size: 2em;
  font-family: 'geosanslightregular',sans-serif;
  
}
#about p{
  padding-right: 20em;
}
.alphatest{
  color:white;
  float: right;
}
footer{
  width:100%;
  height:6em;
  bottom:0;
  left:0;
  background-image: url("../pic/banner.png");
  background-repeat: repeat;
  display:table;
  vertical-align: middle;
}
footer p{
  text-align: center;
  color:white;
  margin-left: auto;
  margin-right: auto;
  padding-top:0.7em;
  padding-left: 0!important;

}

@font-face {
    font-family: 'ubuntu-titletitle';
    src: url('../font/ubuntu-title-webfont.eot');
    src: url('../font/ubuntu-title-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/ubuntu-title-webfont.woff') format('woff'),
         url('../font/ubuntu-title-webfont.ttf') format('truetype'),
         url('../font/ubuntu-title-webfont.svg#ubuntu-titletitle') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'tommy_hilfiger_afregular';
    src: url('../font/tommy___-webfont.eot');
    src: url('../font/tommy___-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/tommy___-webfont.woff') format('woff'),
         url('../font/tommy___-webfont.ttf') format('truetype'),
         url('../font/tommy___-webfont.svg#tommy_hilfiger_afregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'geosanslightregular';
    src: url('../font/geosanslight-webfont.eot');
    src: url('../font/geosanslight-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/geosanslight-webfont.woff') format('woff'),
         url('../font/geosanslight-webfont.ttf') format('truetype'),
         url('../font/geosanslight-webfont.svg#geosanslightregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'go_around_the_booksregular';
    src: url('../font/go_around_the_books-webfont.eot');
    src: url('../font/go_around_the_books-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/go_around_the_books-webfont.woff') format('woff'),
         url('../font/go_around_the_books-webfont.ttf') format('truetype'),
         url('../font/go_around_the_books-webfont.svg#go_around_the_booksregular') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'proximanovalight';
    src: url('../font/go_around_the_books-webfont.eot');
    src: url('../font/go_around_the_books-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/go_around_the_books-webfont.woff') format('woff'),
         url('../font/go_around_the_books-webfont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;

}

